nav bar, float, css
nav bar and float redone, css corrected

--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -14,33 +14,59 @@
   </head>
   <body>
     <header>
-      <div class="float-left table-example1">
-        <a href="index.html">
-          <img
-            class="rocket"
-            src="images/RocketMan-logo.png"
-            alt="RocketMa Logo"
-          />
-        </a>
-      </div>
-      <nav class="float-left table-example2">
-        <a id="a--first" href="https://rocketman.learnwagtail.com/services"
-          >services</a
-        >
-        <a id="a--middle" href="Contact-Us.html">contact</a>
-        <a id="a--last" href="https://learnwagtail.com/wagtail-for-beginners"
-          >wagtaiL&nbsp;course</a
-        >
+      <nav>
+        <div class="centred">
+          <table class="left table--height">
+            <tr>
+              <td class="right-pad">
+                <a href="index.html">
+                  <img
+                    class="rocket"
+                    src="images/RocketMan-logo.png"
+                    alt="RocketMan"
+                  />
+                </a>
+              </td>
+            </tr>
+          </table>
+          <div id="right-container">
+            <table class="right table--height">
+              <tr>
+                <td>
+                  <a
+                    class="menu first"
+                    href="https://rocketman.learnwagtail.com/services"
+                    >services</a
+                  >
+                </td>
+                <td>
+                  <a
+                    class="menu middle"
+                    href="https://mcfunthomas.github.io/101-CSS/Contact-Us.html"
+                    >contact</a
+                  >
+                </td>
+                <td>
+                  <a
+                    class="menu middle"
+                    href="https://learnwagtail.com/tutorials/"
+                    >wagtail&nbsp;course</a
+                  >
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </nav>
-      <div class="clear shadow">text</div>
     </header>
-    <main class="clear">
+
+    <main class="clear top-line">
       <div class="narrow">
         <section><p class="invisible">just space</p></section>
         <!-- ********************************************************************* -->
         <!-- ************************** Contact Info ***************************** -->
         <!-- ********************************************************************* -->
-        <section class="float-left info">
+        <section class="left info">
           <h3 id="contact-word">Contact Us</h3>
           <div class="contact us">
             Fancy our pressure washing service done by our qualified Kärcher
@@ -62,7 +88,7 @@
         <!-- ********************************************************************* -->
         <!-- ************************** Contact Form ***************************** -->
         <!-- ********************************************************************* -->
-        <section class="float-left contact-form">
+        <section class="right contact-form">
           <form action="success.html" method="get">
             <div class="label">
               <label>
