main site responsiveness
responsiveness adjusted, navbar corrected, main text and footer added

--- a/index.html
+++ b/index.html
@@ -15,36 +15,122 @@
   <body>
     <header>
       <nav>
-        <div class="first float-left">.</div>
-        <div class="float-left left-side table-example1">
-          <a href="index.html">
-            <img
-              class="rocket"
-              src="images/RocketMan-logo.png"
-              alt="RocketMa Logo"
-            />
-          </a>
-        </div>
-        <div class="float-left table-example2">
-          <a id="a--first" href="https://rocketman.learnwagtail.com/services"
-            >services</a
-          >
-          <a id="a--middle" href="Contact-Us.html">contact</a>
-          <a id="a--last" href="https://learnwagtail.com/wagtail-for-beginners"
-            >wagtaiL&nbsp;course</a
-          >
+        <div class="centred">
+          <table class="left table--height">
+            <tr>
+              <td class="right-pad">
+                <a href="index.html">
+                  <img
+                    class="rocket"
+                    src="images/RocketMan-logo.png"
+                    alt="RocketMan"
+                  />
+                </a>
+              </td>
+            </tr>
+          </table>
+          <div id="right-container">
+            <table class="right table--height">
+              <tr>
+                <td>
+                  <a
+                    class="menu first"
+                    href="https://rocketman.learnwagtail.com/services"
+                    >services</a
+                  >
+                </td>
+                <td>
+                  <a
+                    class="menu middle"
+                    href="https://mcfunthomas.github.io/101-CSS/Contact-Us.html"
+                    >contact</a
+                  >
+                </td>
+                <td>
+                  <a
+                    class="menu middle"
+                    href="https://learnwagtail.com/tutorials/"
+                    >wagtail&nbsp;course</a
+                  >
+                </td>
+              </tr>
+            </table>
+          </div>
         </div>
       </nav>
-      <div class="clear shadow">text</div>
     </header>
-    <main class="bckgd clear">
-      <div class="first float-left">.</div>
-      <div class="main-text float-left">
-        <h2 class="main">supreme rocket</h2>
-        <h2 class="main">maintenance</h2>
-        <p>Your rocket is your $1,000,000,000 baby. We do get that.</p>
-        <a href="Contact-Us.html" class="button1">contact us</a>
+
+    <main>
+      <div class="bckgd clear">
+        <div class="main-text">
+          <h2 class="main">supreme rocket</h2>
+          <h2 class="main">maintenance</h2>
+          <p class="your-rocket">
+            Your rocket is your $1,000,000,000 baby. We do get that.
+          </p>
+          <a href="Contact-Us.html" class="button1">contact us</a>
+        </div>
+      </div>
+
+      <h3 class="section-header">
+        Your rocket is valuable. Let the professionals work on it.
+      </h3>
+      <div class="waste-text">
+        <p class="why">
+          You may relax and focus on the design of this site. So far, the best
+          experience has been achieved on laptops and desktops where you can
+          appreciate the menu bar with its hovering and clicking effect. Same
+          thing with the
+          <span class="contact-in-text"> CONTACT US</span> button. ENJOY!
+        </p>
+        <p class="why">
+          The below text section serves one purpose ONLY: for the user to see
+          how the "glued" background image of the rocket above looks like while
+          scrolling up and down.
+        </p>
+        <p class="waste-lateral">
+          Bring to the table win-win survival strategies to ensure proactive
+          domination. At the end of the day, going forward, a new normal that
+          has evolved from generation X is on the runway heading towards a
+          streamlined cloud solution. User generated content in real-time will
+          have multiple touchpoints for offshoring. Capitalize on low hanging
+          fruit to identify a ballpark value added activity to beta test.
+          Override the digital divide with additional clickthroughs from DevOps.
+          Nanotechnology immersion along the information highway will close the
+          loop on focusing solely on the bottom line.
+        </p>
+        <p class="waste-middle">
+          Podcasting operational change management inside of workflows to
+          establish a framework. Taking seamless key performance indicators
+          offline to maximise the long tail. Keeping your eye on the ball while
+          performing a deep dive on the start-up mentality to derive convergence
+          on cross-platform integration. Collaboratively administrate empowered
+          markets via plug-and-play networks. Dynamically procrastinate B2C
+          users after installed base benefits. Dramatically visualize customer
+          directed convergence without revolutionary ROI.
+        </p>
+        <p class="waste-lateral">
+          Efficiently unleash cross-media information without cross-media value.
+          Quickly maximize timely deliverables for real-time schemas.
+          Dramatically maintain clicks-and-mortar solutions without functional
+          solutions. Completely synergize resource taxing relationships via
+          premier niche markets. Professionally cultivate one-to-one customer
+          service with robust ideas. Dynamically innovate resource-leveling
+          customer service for state of the art customer service. Objectively
+          innovate empowered manufactured products whereas parallel platforms.
+          Holisticly predominate extensible testing procedures for reliable
+          supply chains. Dramatically engage top-line web services vis-a-vis
+          cutting-edge deliverables.
+        </p>
+        <p class="why">
+          This project may expand in the next assignment... unless I change my
+          mind and build something more interesting. Wish me good luck and great
+          imagination. Thank you!
+        </p>
       </div>
     </main>
+    <footer>
+      <p>© 2021 Rocketman</p>
+    </footer>
   </body>
 </html>
