--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </td>
                 <td>
                   <a
-                    class="menu middle"
+                    class="menu last"
                     href="https://learnwagtail.com/tutorials/"
                     >wagtail&nbsp;course</a
                   >
