--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
     </main>
     <footer>
-      <p>© 2021 Rocketman</p>
+      <p>© 2021 Rocketman & Jumping Pixel</p>
     </footer>
   </body>
 </html>
