waste text width, footer
1. waste text updated and slightly reformatted in css
2. footer updated and reformatted, snippet for an icon added

--- a/index.html
+++ b/index.html
@@ -72,65 +72,81 @@
         </div>
       </div>
 
-      <h3 class="section-header">
-        Your rocket is valuable. Let the professionals work on it.
-      </h3>
-      <div class="waste-text">
-        <p class="why">
-          You may relax and focus on the design of this site. So far, the best
-          experience has been achieved on laptops and desktops where you can
-          appreciate the menu bar with its hovering and clicking effect. Same
-          thing with the
-          <span class="contact-in-text"> CONTACT US</span> button. ENJOY!
-        </p>
-        <p class="why">
-          The below text section serves one purpose ONLY: for the user to see
-          how the "glued" background image of the rocket above looks like while
-          scrolling up and down.
-        </p>
-        <p class="waste-lateral">
-          Bring to the table win-win survival strategies to ensure proactive
-          domination. At the end of the day, going forward, a new normal that
-          has evolved from generation X is on the runway heading towards a
-          streamlined cloud solution. User generated content in real-time will
-          have multiple touchpoints for offshoring. Capitalize on low hanging
-          fruit to identify a ballpark value added activity to beta test.
-          Override the digital divide with additional clickthroughs from DevOps.
-          Nanotechnology immersion along the information highway will close the
-          loop on focusing solely on the bottom line.
-        </p>
-        <p class="waste-middle">
-          Podcasting operational change management inside of workflows to
-          establish a framework. Taking seamless key performance indicators
-          offline to maximise the long tail. Keeping your eye on the ball while
-          performing a deep dive on the start-up mentality to derive convergence
-          on cross-platform integration. Collaboratively administrate empowered
-          markets via plug-and-play networks. Dynamically procrastinate B2C
-          users after installed base benefits. Dramatically visualize customer
-          directed convergence without revolutionary ROI.
-        </p>
-        <p class="waste-lateral">
-          Efficiently unleash cross-media information without cross-media value.
-          Quickly maximize timely deliverables for real-time schemas.
-          Dramatically maintain clicks-and-mortar solutions without functional
-          solutions. Completely synergize resource taxing relationships via
-          premier niche markets. Professionally cultivate one-to-one customer
-          service with robust ideas. Dynamically innovate resource-leveling
-          customer service for state of the art customer service. Objectively
-          innovate empowered manufactured products whereas parallel platforms.
-          Holisticly predominate extensible testing procedures for reliable
-          supply chains. Dramatically engage top-line web services vis-a-vis
-          cutting-edge deliverables.
-        </p>
-        <p class="why">
-          This project may expand in the next assignment... unless I change my
-          mind and build something more interesting. Wish me good luck and great
-          imagination. Thank you!
-        </p>
-      </div>
+      <section>
+        <h3 class="section-header">
+          Your rocket is valuable. Let the professionals work on it.
+        </h3>
+        <div class="waste-text">
+          <p class="why1">
+            You may relax and focus on the design of this site. So far, the
+            <span class="text-highlight--blue">
+              best experience has been achieved on laptops and desktops
+            </span>
+            where you can experience a "glued" background and hovering and
+            clicking effects on the menu bar items as well as the
+            <span class="contact-in-text"> CONTACT US</span> button. ENJOY!
+          </p>
+          <p class="why2">
+            The below text section serves one purpose ONLY: for the user to see
+            how the "glued" background image of the rocket above looks like
+            while scrolling up and down. Again, on desktops and laptops only. I
+            hope to improve the user experience with my next project.
+          </p>
+          <p class="waste-lateral">
+            Bring to the table win-win survival strategies to ensure proactive
+            domination. At the end of the day, going forward, a new normal that
+            has evolved from generation X is on the runway heading towards a
+            streamlined cloud solution. User generated content in real-time will
+            have multiple touchpoints for offshoring. Capitalize on low hanging
+            fruit to identify a ballpark value added activity to beta test.
+            Override the digital divide with additional clickthroughs from
+            DevOps. Nanotechnology immersion along the information highway will
+            close the loop on focusing solely on the bottom line.
+          </p>
+          <p class="waste-middle">
+            Podcasting operational change management inside of workflows to
+            establish a framework. Taking seamless key performance indicators
+            offline to maximise the long tail. Keeping your eye on the ball
+            while performing a deep dive on the start-up mentality to derive
+            convergence on cross-platform integration. Collaboratively
+            administrate empowered markets via plug-and-play networks.
+            Dynamically procrastinate B2C users after installed base benefits.
+            Dramatically visualize customer directed convergence without
+            revolutionary ROI.
+          </p>
+          <p class="waste-lateral">
+            Efficiently unleash cross-media information without cross-media
+            value. Quickly maximize timely deliverables for real-time schemas.
+            Dramatically maintain clicks-and-mortar solutions without functional
+            solutions. Completely synergize resource taxing relationships via
+            premier niche markets. Professionally cultivate one-to-one customer
+            service with robust ideas. Dynamically innovate resource-leveling
+            customer service for state of the art customer service. Objectively
+            innovate empowered manufactured products whereas parallel platforms.
+            Holisticly predominate extensible testing procedures for reliable
+            supply chains. Dramatically engage top-line web services vis-a-vis
+            cutting-edge deliverables.
+          </p>
+          <p class="why">
+            This project may expand in the next assignment... unless I change my
+            mind and build something more interesting. Wish me good luck and
+            great imagination. Thank you!
+          </p>
+        </div>
+      </section>
     </main>
     <footer>
-      <p>© 2021 Rocketman & Jumping Pixel</p>
+      <p id="vcss">
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+          <img
+            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!"
+          />
+        </a>
+      </p>
+      <p id="copyright" class="text-highlight--red">
+        © 2021 Rocketman & Jumping Pixel
+      </p>
     </footer>
   </body>
 </html>
