contact us updated
link to success added.
h3 => h1 change

--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -67,7 +67,7 @@
         <!-- ************************** Contact Info ***************************** -->
         <!-- ********************************************************************* -->
         <section class="left info">
-          <h3 id="contact-word">Contact Us</h3>
+          <h1 id="contact-word">Contact Us</h1>
           <div class="contact us">
             Fancy our pressure washing service done by our qualified Kärcher
             team of experts?
@@ -118,7 +118,7 @@
               </label>
             </div>
             <div class="label">
-              <a href="#" class="button2 clear">submit</a>
+              <a href="success.html" class="button2 clear">submit</a>
             </div>
           </form>
         </section>
