contact us link
"Contact Us" link changed to local

--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
                   >
                 </td>
                 <td>
-                  <a
-                    class="menu middle"
-                    href="https://mcfunthomas.github.io/101-CSS/Contact-Us.html"
-                    >contact</a
-                  >
+                  <a class="menu middle" href="Contact-Us.html">contact</a>
                 </td>
                 <td>
                   <a
