--- a/success.html
+++ b/success.html
@@ -18,14 +18,15 @@
     </style>
   </head>
   <body>
-    <h2>Thank you for submitting your data for free!</h2>
+    <h1 id="thank-you">Thank you for submitting your data for free!</h1>
     <p>
       Refer a friend to have a chance to win &#8383;1! <br />
       Yes! ONE BITCOIN!
     </p>
     <p>The offer ends 31 / 12 / 2021; 23:59 GMT.</p>
-    <h3>
-      <button><a href="index.html">Back Home</a></button>
-    </h3>
+
+    <div>
+      <a class="home" href="index.html">Back Home</a>
+    </div>
   </body>
 </html>
