--- a/success.html
+++ b/success.html
@@ -18,15 +18,29 @@
     </style>
   </head>
   <body>
-    <h1 id="thank-you">Thank you for submitting your data for free!</h1>
-    <p>
-      Refer a friend to have a chance to win &#8383;1! <br />
-      Yes! ONE BITCOIN!
-    </p>
-    <p>The offer ends 31 / 12 / 2021; 23:59 GMT.</p>
-
-    <div>
-      <a class="home" href="index.html">Back Home</a>
-    </div>
+    <main class="min-height">
+      <h1 id="thank-you">Thank you for submitting your data for free!</h1>
+      <p>
+        Refer a friend to have a chance to win &#8383;1! <br />
+        Yes! ONE BITCOIN!
+      </p>
+      <p>The offer ends 31 / 12 / 2021; 23:59 GMT.</p>
+      <div>
+        <a class="home" href="index.html">Back Home</a>
+      </div>
+    </main>
+    <footer>
+      <p id="vcss">
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+          <img
+            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!"
+          />
+        </a>
+      </p>
+      <p id="copyright" class="text-highlight--red">
+        © 2021 Rocketman & Jumping Pixel
+      </p>
+    </footer>
   </body>
 </html>
