--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -137,5 +137,18 @@
         </section>
       </div>
     </main>
+    <footer class="clear">
+      <p id="vcss">
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+          <img
+            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!"
+          />
+        </a>
+      </p>
+      <p id="copyright" class="text-highlight--red">
+        © 2021 Rocketman & Jumping Pixel
+      </p>
+    </footer>
   </body>
 </html>
