'contact us' form updated/improved
1/ css for Contact Us form updated/changed:
min,max width n height established
2. css properties for the form improved/grouped
3. some attributes deleted from textarea tag

--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -124,12 +124,7 @@
             <div class="label">
               <label
                 >message:
-                <textarea
-                  name="textarea"
-                  cols="30"
-                  rows="20"
-                  required
-                ></textarea>
+                <textarea name="textarea" required></textarea>
               </label>
             </div>
             <button class="button2 label clear">submit</button>
